<resources>
    <string name="app_name">InputScreenTest2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_prompt">Type a question about a decision you\'re having trouble with:</string>
    <string name="text_input_hint">Your question</string>
    <string name="turn_on_chatgpt">Turn on ChatGPT?</string>
    <string name="inputted_question">%s</string>
    <string name="response">ChatGPT?: %s</string>
</resources>